Updater Test 	modified:   Mods/Sonic_06/UpdaterTest/mod.ini

--- a/Mods/Sonic_06/UpdaterTest/mod.ini
+++ b/Mods/Sonic_06/UpdaterTest/mod.ini
@@ -10,5 +10,5 @@ Merge="False"
 CustomFilesystem="False"
 
 [Networking]
-Metadata="https://github.com/HyperPolygon64/Unify-Networking/blob/master/Sonic_06/UpdaterTest/mod.ini"
-Data="https://github.com/HyperPolygon64/Unify-Networking/blob/master/Sonic_06/UpdaterTest/mod.zip"
+Metadata="https://raw.githubusercontent.com/HyperPolygon64/Unify-Networking/master/Mods/Sonic_06/UpdaterTest/mod.ini"
+Data="https://raw.githubusercontent.com/HyperPolygon64/Unify-Networking/master/Mods/Sonic_06/UpdaterTest/mod.zip"
